--- a/styles/style.css
+++ b/styles/style.css
@@ -12,18 +12,16 @@ body{
 
     display: grid;
     place-items: center;
-    align-items: center;
-    justify-content: center;
 }
-
 
 .image-container img {
     width: 100%;
     height: 100%;
     border-radius: 20px;
 }
+
 .main{
-    width: 80%;
+    width: 85%;
     background-color: hsl(0, 0%, 100%);
     padding: 1.8rem;
     border-radius: 30px;
@@ -31,13 +29,6 @@ body{
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    align-items: center;
-    justify-content: center;
-
-    .image-container{
-        width: 14rem;
-        height: 10rem;
-    }
 
 }
 
@@ -138,4 +129,45 @@ h1,h2 {
 
 span {
     font-weight: bold;
+}
+
+@media (min-width: 768px) {
+    .main {
+        width: 74%;
+        gap: 2rem;
+        padding: 3rem;
+    }
+
+    .first-section {
+        gap: 1rem;
+        h1{
+            font-size: 1.9em;
+               
+        }
+    }
+
+    .section h2 {
+        font-size: 1.8em;
+    }
+}
+
+@media (min-width: 1024px){
+    .main{
+        width: 55%;
+        padding: 3rem;
+        gap: 1.5;
+    }
+
+    .first-section {
+        gap: 1rem;
+        h1{
+            font-size: 2.5em;
+               
+        }
+    }
+
+    .section h2 {
+        font-size: 2em;
+    }
+
 }
